<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/group_divider"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/simple_calculator"
        android:textSize="40sp" />

    <GridLayout
        android:id="@+id/group_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:inputType="number" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/divider"
            android:onClick="divide"
            />
        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiplier"
            android:onClick="multiply"
            />
        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pluser"
            android:onClick="plus"
            />
        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minuser"
            android:onClick="minus"
            />
    </GridLayout>


</RelativeLayout>